--- a/src/componentes/Menu/menu.css
+++ b/src/componentes/Menu/menu.css
@@ -20,6 +20,7 @@
   font-family: "Metal Mania", cursive;
   font-size: 45px;
   color: white;
+  letter-spacing: 10px;
 }
 
 .container-buttons {
